@@ -218,12 +218,7 @@ void CSceneLoaderIrr::readAnimators(io::IXMLReader* reader, ISceneNode* node)
 				if (node)
 				{
 					core::stringc typeName = attr->getAttributeAsString("Type");
-					ISceneNodeAnimator* anim = 0;
-
-					// todo: need a method to add animator by name in the scene manager. This loader and others like it
-					// have no business messing with the animator factories!
-					for (s32 i=SceneManager->getRegisteredSceneNodeAnimatorFactoryCount()-1; i >=0 && !anim; --i)
-						anim = SceneManager->getSceneNodeAnimatorFactory(i)->createSceneNodeAnimator(typeName.c_str(), node);
+					ISceneNodeAnimator* anim = SceneManager->createSceneNodeAnimator(typeName.c_str(), node);
 
 					if (anim)
 					{
